--- a/WebContent/personalplan/support.html
+++ b/WebContent/personalplan/support.html
@@ -2,7 +2,8 @@
 	<button id='PageNavNextSupport' class='prevButton' >Next</button>
 	<button id='PageNavSubmitBSupport' class='submitButton'>Submit</button>
 	
-	<div id='supportD'>
+	<div id='supportReqD'>
+	<h4>Support Required</h4>
 		<label for='crowdT' class='toggle'>Crowd Safety: </label>
 		<div id='crowdD'>
 			<textarea id='crowdT' name='crowdT' rows="3" cols="50"></textarea>
@@ -84,6 +85,7 @@
 
 
 	<div id='mobilityD'>
+	<h4>Mobility & Transport</h4>
 		<label for='elevatorT' class='toggle'>Stairs/Escalators/Elevators: </label>
 		<div id='elevatorD'>
 			<textarea id='elevatorT' name='elevatorT' rows="3" cols="50"></textarea>
@@ -126,12 +128,6 @@
 		</div>
 		<br />
 
-		<label for='beliefsT' class='toggle'>Maintaining cultural and spirtual beliefs: </label>
-		<div id='beliefsD'>
-			<textarea id='beliefsT' name='beliefsT' rows="3" cols="50"></textarea>
-		</div>
-		<br />
-
 		<label for='otherMobilityT' class='toggle'>Other information: </label>
 		<div id='otherMobilityD'>
 			<textarea id='otherMobilityT' name='otherMobilityT' rows="3" cols="50"></textarea>
@@ -141,6 +137,7 @@
 
 
 	<div id='financialD'>
+	<h4>Financial Support</h4>
 		<label for='financialAdminT' class='toggle'>Financial Administrator: </label>
 		<div id='financialAdminD'>
 			<textarea id='financialAdminT' name='financialAdminT' rows="3" cols="50"></textarea>
@@ -228,10 +225,138 @@
 
 
 	<div id='activitiesD'>
+	<h4>Daily Activities</h4>
+		<label class='toggle'>Sleeping: </label>
+		<div id='sleepingD'>
+			<textarea id='sleepingT' name='sleepingT' rows="3" cols="50"></textarea>
+		</div>
+		<br />
 		
+		<label class='toggle'>Bed Time Routine</label>
+		<div id='btrD'>
+			<textarea id='btrT' name='btrT' rows="3" cols="50"></textarea>
+		</div>
+		<br />
+		
+		<label class='toggle'>Bathing Personal Care: </label>
+		<div id='bathingCareD'>
+			<textarea id='bathingCareT' name='bathingCareT' rows="3" cols="50"></textarea>
+		</div>
+		<br />
+		
+		<label class='toggle'>Dressing: </label>
+		<div id='dressingD'>
+			<textarea id='dressingT' name='dressingT' rows="3" cols="50"></textarea>
+		</div>
+		<br />
+		
+		<label class='toggle'>Toileting: </label>
+		<div id='toiletD'>
+			<textarea id='toiletT' name='toiletT' rows="3" cols="50"></textarea>
+		</div>
+		<br />
+		
+		<label class='toggle'>Menstruation: </label>
+		<div id='MenstruationD'>
+			<textarea id='MenstruationT' name='MenstruationT' rows="3" cols="50"></textarea>
+		</div>
+		<br />
+		
+		<label class='toggle'>Cooking: </label>
+		<div id='cookingD'>
+			<textarea id='cookingT' name='cookingT' rows="3" cols="50"></textarea>
+		</div>
+		<br />
+		
+		<label class='toggle'>Cleaning: </label>
+		<div id='cleaningD'>
+			<textarea id='cleaningT' name='cleaningT' rows="3" cols="50"></textarea>
+		</div>
+		<br />
+		
+		<h4>Weekly Routine</h4>
+		<label class='toggle'>Monday: </label>
+		<div id='MondayD'>
+			<textarea id='MondayT' name='MondayT' rows="3" cols="50"></textarea>
+		</div>
+		<br />
+		
+		<label class='toggle'>Tuesday: </label>
+		<div id='TuesdayD'>
+			<textarea id='TuesdayT' name='TuesdayT' rows="3" cols="50"></textarea>
+		</div>
+		<br />
+		
+		<label class='toggle'>Wednesday: </label>
+		<div id='WednesdayD'>
+			<textarea id='WednesdayT' name='WednesdayT' rows="3" cols="50"></textarea>
+		</div>
+		<br />
+		
+		<label class='toggle'>Thursday: </label>
+		<div id='ThursdayD'>
+			<textarea id='ThursdayT' name='ThursdayT' rows="3" cols="50"></textarea>
+		</div>
+		<br />
+		
+		<label class='toggle'>Friday: </label>
+		<div id='FridayD'>
+			<textarea id='FridayT' name='FridayT' rows="3" cols="50"></textarea>
+		</div>
+		<br />
+		
+		<label class='toggle'>Saturday: </label>
+		<div id='SaturdayD'>
+			<textarea id='SaturdayT' name='SaturdayT' rows="3" cols="50"></textarea>
+		</div>
+		<br />
+		
+		<label class='toggle'>Sunday: </label>
+		<div id='SundayD'>
+			<textarea id='SundayT' name='SundayT' rows="3" cols="50"></textarea>
+		</div>
+		<br />
+		
+		<label class='toggle'>Other things I like to do: </label>
+		<div id='weeklyOtherD'>
+			<textarea id='weeklyOtherT' name='weeklyOtherT' rows="3" cols="50"></textarea>
+		</div>
+		<br />
+		
+		<h4>General Daily Routines</h4>
+		<label class='toggle'>Morning Routine: </label>
+		<div id='morningD'>
+			<textarea id='morningT' name='morningT' rows="3" cols="50"></textarea>
+		</div>
+		<br />
+		
+		<label class='toggle'>Meal Time: </label>
+		<div id='mealTimeD'>
+			<textarea id='mealTimeT' name='mealTimeT' rows="3" cols="50"></textarea>
+		</div>
+		<br />
+		
+		<label class='toggle'>Afternoon and Evening Routine: </label>
+		<div id='arvoRoutineD'>
+			<textarea id='arvoRoutineT' name='arvoRoutineT' rows="3" cols="50"></textarea>
+		</div>
+		<br />
+		
+		<label class='toggle'>Sleeping and Overnight Routine: </label>
+		<div id='overnightD'>
+			<textarea id='overnightT' name='overnightT' rows="3" cols="50"></textarea>
+		</div>
+		<br />
+		
+		<label class='toggle'>Weekend Routine: </label>
+		<div id='weekendD'>
+			<textarea id='weekendT' name='weekendT' rows="3" cols="50"></textarea>
+		</div>
+		<br />
 	</div>
 
 	<div id='relaxationD'>
+		<h4>Relaxation</h4>
 		<label for='relaxPrefT' class='toggle'>I prefer to relax by doing the following: </label>
 		<div id='relaxPrefD'>
 			<textarea id='relaxPrefT' name='relaxPrefT' rows="3" cols="50"></textarea>
@@ -307,7 +432,7 @@
 			var jsonText = JSON.stringify(communication);
 			
 			$.ajax({
-				url:'./rest/personalplan/communication/' + $.cookie('user_id') + "/" + $.cookie('auth_token') +'/1',
+				url:'./rest/personalplan/supportrequired/' + $.cookie('user_id') + "/" + $.cookie('auth_token') +'/1',
 				type: 'POST',
 				contentType: 'application/json; charset=UTF-8',
 				dataType: 'json',
