--- a/WebContent/personalplan/client.html
+++ b/WebContent/personalplan/client.html
@@ -3,6 +3,7 @@
 	<button id='PageNavSubmitBClient' class='submitButton'>Submit</button>
 	
 	<div id='detailsD'>
+		<h4>Client Details</h4>
 		<label for='nameT' id='nameL' class='toggle'>Name: </label>
 		<div id='nameD' >
 			<input type='text' name='nameT' id='nameT' />
@@ -65,7 +66,8 @@
 
 	</div>
 
-	<div id='alertInfoD'>
+	<div id='alertInfoD' class='hidden'>
+		<h4>Alert Information</h4>
 		<label for='allergiesT' class='toggle'>Allergies: </label>
 		<div id='allergiesD'>
 			<textarea id='allergiesT' name='allergiesT' rows="3" cols="50"></textarea>
@@ -121,7 +123,8 @@
 		<br />
 	</div>
 
-	<div id='livingD'>
+	<div id='livingD' class='hidden'>
+		<h4>Living Arrangements</h4>
 		<label for='serviceT' class='toggle'>Service: </label>
 		<div id='serviceD'>
 			<textarea id='serviceT' name='serviceT' rows="3" cols="50"></textarea>
@@ -159,7 +162,7 @@
 		<br />
 	</div>	
 
-	<div id='formalD'>
+	<div id='formalD' class='hidden'>
 		<h4 class='toggle'>Formal Orders</h4>
 		<div id='formalOdersD'>
 			<label for='orderForT' class='toggle' >Order For: </label>
@@ -289,10 +292,7 @@
 
 	$(document).ready(function() {
 		//page load
-		//hide necessary elements
-		$("#alertInfoD").hide();
-		$("#livingD").hide();
-		$("#formalD").hide();
+		
 		
 		//click on the previous button
 		$("#PageNavPrevClient").click(function(){
@@ -310,6 +310,15 @@
 		
 		//click on the submit button
 		$("#PageNavSubmitBClient").click(function(){
+			var personalDetails = new Object();
+			personalDetails.creationDate = $("#createDateT").val();
+			personalDetails.preferredName = $("#nicknameT").val();
+			personalDetails.reviewDate = $("#reviseDateT").val();
+			personalDetails.dob = $("#dobT").val();
+			personalDetails.email = $("#emailT").val();
+			personalDetails.phoneNumber = $("#phoneT").val();
+			personalDetails.mobileNumber = $("#mobileT").val();
+			
 			var alertInformation = new Object();
 			alertInformation.allergies = $("#allergiesT").val();
 			alertInformation.complexSupportNeeds = $("#supportNeedsT").val();
@@ -337,49 +346,61 @@
 			formalOrders.visitorInfo = $("#communityVisitorT").val();
 			
 			var livingArangements = new Object();
-			livingArangements.address = $("#addressT").val();
-			var familyMembers = new Object();
-//ITERATE OVER THESE DYNAMICALLY			
-			livingArangements.familyMembers = familyMembers;
-			var importantPerson = new Object();
-//ITERATE OVER THESE DYNAMICALLY	
-			livingArangements.importantPerson = importantPerson;
+			livingArangements.address = $("#addressLivingT").val();		
 			livingArangements.phoneNumber = $("#phoneT").val();
 			livingArangements.service = $("#serviceT").val();
 			livingArangements.sickContact = $("#sickContactT").val();
 			
-			var personDetails = new Object();
-			personDetails.creationDate = $("#createDateT").val();
-			personDetails.preferredName = $("#nicknameT").val();
-			personDetails.reviewDate = $("#reviceDateT").val();
-			personalDetails.dob = $("#dobT").val();
-			personalDetails.email = $("#emailT").val();
-			personalDetails.phoneNumber = $("#phoneT").val();
-			personalDetails.mobileNumber = $("#mobileT").val();
-			
 			
 			var clientDetails = new Object();
+			clientDetails.personalDetails = personalDetails;
 			clientDetails.alertInformation = alertInformation;
 			clientDetails.formalOrders = formalOrders;
 			clientDetails.livingArangements = livingArangements;
-			clientDetails.personDetails = personDetails;
 			
 			var jsonText = JSON.stringify(clientDetails);
+					
 			
 			$.ajax({
-				url:'./rest/personalplan/clientdetails/' + $.cookie('user_id') + "/" + $.cookie('auth_token') +'/1',
+				url:'./rest/personalplan/clientdetails/' + $.cookie('user_id') + "/" + $.cookie('auth_token') +'/' + $.cookie("client_id"),
 				type: 'POST',
 				contentType: 'application/json; charset=UTF-8',
 				dataType: 'json',
 				data: jsonText,
 				success: function(jqXHR, textStatus) {
-					alert(textStatus);
+					alert("client details saved!");
 					nextNav('clientD');
 				},
 				error: function(jqXHR, textStatus) {
-					alert(textStatus);
+					alert("error saving client details");
 				}
 			});
+			
+			
+			
+			var clientName = new Object();
+			clientName.rName = $("#nameT").val();
+			clientName.IDT = $("#IDT").val();
+			var jsonText2 = JSON.stringify(clientName); 
+			
+			
+			
+			//push the name
+			//$.ajax({
+				//url: "./rest/user/" + $.cookie('user_id') + "/" + $.cookie('auth_token') + "/" + $.cookie('client_id'),
+				//type:"POST",
+				//contentType: "application/json; charset=UTF-8",
+				//dataType: 'json',
+				//data: jsonText2,
+				//success: function(d) {		
+					//alert("name and ID saved!");
+				//},
+				//error: function(xhr, textStatus) {
+					// do something to handle error
+					//alert("error saving name and ID");
+				//}
+			//});
+			
 		});	
 	});
 </script>
