Getting data from personal plan
-Finished getting personal plan data and storing it
-Fixed syntax errors in support, planning and communication
-Printing client personal details onto pdf

--- a/WebContent/personalplan/communication.html
+++ b/WebContent/personalplan/communication.html
@@ -66,13 +66,13 @@
 			var jsonText = JSON.stringify(communication);
 			
 			$.ajax({
-				url:'./rest/personalplan/communication/' + $.cookie('user_id') + "/" + $.cookie('auth_token') +'/' $.cookie("client_id"),
+				url:'./rest/personalplan/communication/' + $.cookie('user_id') + "/" + $.cookie('auth_token') +'/' + $.cookie("client_id"),
 				type: 'POST',
 				contentType: 'application/json; charset=UTF-8',
 				dataType: 'json',
 				data: jsonText,
 				success: function(jqXHR, textStatus) {
-					alert("communication details saved!"");
+					alert("communication details saved!");
 					nextNav('communicationD');
 				},
 				error: function(jqXHR, textStatus) {
