--- a/WebContent/personalplan/support.html
+++ b/WebContent/personalplan/support.html
@@ -434,7 +434,7 @@
 				dataType: 'json',
 				data: jsonText,
 				success: function(jqXHR, textStatus) {
-					alert("support details saved!"");
+					alert("support details saved!");
 					nextNav('supportD');
 				},
 				error: function(jqXHR, textStatus) {
