Fixed pdf formatting
-Fixed pdf formatting that was changed

--- a/WebContent/reports/searchreports.html
+++ b/WebContent/reports/searchreports.html
@@ -364,21 +364,23 @@ function selectPP(el) {
 		doc.setFontType("bold");
 		doc.text(10, 95, 'Health Details');
 		//Dietary requirements
-		doc.text(10, 100, 'Dietary Requirements');
+		doc.text(10, 105, 'Dietary Requirements');
 		doc.setFontType("normal");
 		
 		//Health information
-		doc.text(10, 105, 'Health Information');
+		doc.setFontType("bold");
+		doc.text(10, 115, 'Health Information');
 		doc.setFontType("normal");
 		
 		//Health management
-		doc.text(10, 110, 'Health Management');
+		doc.setFontType("bold");
+		doc.text(10, 125, 'Health Management');
 		doc.setFontType("normal");
 		
 		
 		/* -------------------------------- COMMUNICATION --------------------------------------*/
 		doc.setFontType("bold");
-		doc.text(10, 120, 'Communication');
+		doc.text(10, 140, 'Communication');
 		doc.setFontType("normal");
 		
 		
